# invenio-theme-tugraz

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.md  README.rst  babel.ini  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: pypi-publish.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_theme_tugraz/: __init__.py  config.py  crypto.py  deposits.py  ext.py  search.py  version.py  views.py  webpack.py
invenio_theme_tugraz/assets/scss/invenio_theme_tugraz/: footer.scss  header.scss  overrides.scss  theme.scss  variables.scss
invenio_theme_tugraz/assets/scss/invenio_theme_tugraz/search/: footer.scss  theme.scss  variables.scss
invenio_theme_tugraz/assets/scss/invenio_tugraz_theme/: footer.scss  header.scss  overrides.scss  theme.scss  variables.scss
invenio_theme_tugraz/assets/scss/invenio_tugraz_theme/search/: footer.scss  theme.scss  variables.scss
invenio_theme_tugraz/assets/semantic-ui/js/invenio_theme_tugraz/: theme.js  unlock.js
invenio_theme_tugraz/assets/semantic-ui/js/invenio_theme_tugraz/deposit/: DoiMint.js  PublisherField.js  RDMDepositForm.js
invenio_theme_tugraz/assets/semantic-ui/js/invenio_theme_tugraz/search/: components.js  index.js
invenio_theme_tugraz/assets/semantic-ui/js/invenio_theme_tugraz/user_records_search/: components.js
invenio_theme_tugraz/assets/semantic-ui/less/invenio_theme_tugraz/: accounts.less  communities.less  deposit.less  footer.less  frontpage.less  header.less  login.less  macros.less  overrides.less  record.less  search.less  theme.less  variables.less
invenio_theme_tugraz/templates/invenio_theme_tugraz/: 423.html  base.html  benefits.html  comingsoon.html  contact_us.html  default_error.html  footer.html  frontpage.html  frontpage_overview.html  header.html  header_frontpage.html  index.html  navbar.html  not_tugraz_authenticated.html  overview.html  recent_uploads.html  record_landing_page.html  search.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/accounts/: accounts_base.html  header_login.html  login.html  login_user.html  register_user.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/deposit/: deposit.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/details/: doi.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/landingpage/: detail.html  doi.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/macros/: authors.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/records/: deposit.html  search_deposit.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/search/: search.html
invenio_theme_tugraz/templates/invenio_theme_tugraz/search/invenio_search_ui/: header.html  search.html
invenio_theme_tugraz/translations/: messages.pot
invenio_theme_tugraz/translations/de/LC_MESSAGES/: messages.po
invenio_theme_tugraz/translations/en/LC_MESSAGES/: messages.po
tests/: conftest.py  test_invenio_theme_tugraz.py
tests/ui/: conftest.py  test_views.py
