# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2026 Graz University of Technology.
#
# invenio-theme-tugraz is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-theme-tugraz
version = attr: invenio_theme_tugraz.__version__
description = "Invenio module for TUGRAZ theme."
long_description = file: README.rst, CHANGES.rst
keywords = invenio theme invenioRDM TU-Graz
license = MIT
author = "Graz University of Technology"
author_email = mojib.wali@tugraz.at
url = https://github.com/tu-graz-library/invenio-theme-tugraz
platforms = any
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.14
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.14
zip_safe = False
install_requires =
    invenio-assets>=2.0.0
    invenio-i18n>=3.0.0
    invenio_config_tugraz>=0.14.0
    invenio_records_global_search>=0.3.0
    invenio_records_marc21>=0.28.0

[options.extras_require]
tests =
    invenio-app>=3.0.0
    invenio-previewer>=4.0.0
    invenio-search[opensearch2]>=3.0.0
    pytest-black>=0.6.0
    pytest-invenio>=4.0.0
    Sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_theme_tugraz = invenio_theme_tugraz:InvenioThemeTugraz
invenio_base.blueprints =
    invenio_theme_tugraz = invenio_theme_tugraz.views:create_blueprint
invenio_i18n.translations =
    messages = invenio_theme_tugraz
invenio_assets.webpack =
    invenio_theme_tugraz_theme = invenio_theme_tugraz.webpack:theme
invenio_config.module =
    invenio_theme_tugraz = invenio_theme_tugraz.config
invenio_base.finalize_app =
    invenio_theme_tugraz = invenio_theme_tugraz.ext:finalize_app

[aliases]
test = pytest

[build_sphinx]
source_dir = docs/
build_dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_theme_tugraz/translations/
use_fuzzy = True

[extract_messages]
copyright_holder = Graz University of Technology
msgid_bugs_address = mojib.wali@tugraz.at
mapping_file = babel.ini
output_file = invenio_theme_tugraz/translations/messages.pot
add_comments = NOTE

[init_catalog]
input_file = invenio_theme_tugraz/translations/messages.pot
output_dir = invenio_theme_tugraz/translations/

[update_catalog]
input_file = invenio_theme_tugraz/translations/messages.pot
output_dir = invenio_theme_tugraz/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_theme_tugraz --cov-report=term-missing tests invenio_theme_tugraz
testpaths = tests invenio_theme_tugraz
live_server_scope = module
